css/style.css
/* ... */
.slick-slide.slick-loading img {
  display: none;
}
.slick-slide.dragging img {
  pointer-events: none;
}
.slick-initialized .slick-slide {
  display: block;
}
.slick-loading .slick-slide {
  visibility: hidden;
}
.slick-vertical .slick-slide {
    display: block;
    height: auto;
    border: 1px solid transparent;
}
.slick-arrow.slick-hidden {
  display: none;
}
.slider {
  position: absolute;
  top: 272px;
  left: 71px;
  width: 70.5%;
}
 #slider {
  position: absolute;
  top: 272px;
  left: 71px;
  max-width: 239px !important;
  border: 1px solid #8591a2;
  height: 140px;
  overflow: hidden;
}
#slider-image {
  max-width: 100% !important;
}
.previous {
  position:absolute;
  margin-top: 50px;
  left: -47px;
}
.next {
  position:absolute;
  top: 50px !important;
  right: -48px;
 }

/* RESPONSIVENESS */
@media only screen and (min-width: 0px) {
  html,body {
    padding: 0 !important;
    margin: 0 !important;

  }
  #top-menu {
    padding: 0 !important;
    margin: 0 !important;
    display:flex;
    justify-content: space-around;
  }

  #top-menu li a {
     margin: 12px 10px 20px 10px;
     font-size: 0.75em;
     padding: 0 !important;
     padding-left: 2px !important;
  }
  .dynamo {
    height: 25px !important;
  }
  #clouds {
    min-height: 40vh;
    margin-top:-29vh;
  }
  #sea {
    margin-top:25.9vh;
  }
  .main {
    margin-top:-6vh;
    height: 1850px;
   }
  #social-media {
    margin-top: 0;
    padding: 0 10px 0 10px;
    display: flex;
    justify-content: space-around;
  }
  #social-media a {
    margin-top: 18px !important;
    padding-top: 0 !important;
    box-sizing: content-box !important;
    width: 40px !important;
  }
  #social-media a img {
    margin-top: 18px;
  }
  #linkedin img, #github img {
    margin-top: 16px !important;
    margin-left: -1px !important;
  }
  #mail img {
    margin-top: 16px !important;
    margin-left: -2px !important;
  }
  #twitter, #linkedin, #github, #mail {
    border: 2px solid rgba(255,255,255,0);
    border-radius: 100% !important;
    width: 45px;
    margin: 0;
    height: 45px;
  }
  #twitter:hover {
    background-color: #4ca1eb !important;
    border: 2px solid #fff;
  }
  #linkedin:hover {
    background-color: #3377b0 !important;
    border: 2px solid #fff;
  }
  #github:hover {
    background-color: #333 !important;
    border: 2px solid #fff;
  }
  #mail:hover {
    background-color: #eeb053 !important;
    border: 2px solid #fff;
  }
  #contact-heading-container {
    margin-top: -30px !important;
  }
  #cocanvas-modal, #origame-modal, #tictac-modal, #burning-modal, #ph-modal {
    background: #fff;
    padding: 15px !important;
    max-width: 290px;
    font-family: 'Montserrat', sans-serif;
    font-weight: 300;
    color: #000;
    height: 410px;
    box-sizing: content-box !important;
  }
.cocanvas-close, .origame-close, .tictac-close, .burning-close, .ph-close {
  margin-top: -20px !important;
  padding: 0px !important;
}
#mockup {
  display:none;
}
  .modal-text {
    font-size: 0.82em;
    box-sizing: content-box !important;
  }
  #slider {
    margin-left: -25px !important;
    margin-top: -20px !important;
    margin-right: 0px !important;
    border: none !important;
  }
}
@media only screen and (min-width: 380px) {

  .slider {
    position: absolute;
    top: 272px;
    left: 71px;
    width: 70.5%;
  }
   #slider {
    position: absolute;
    top: 290px !important;
    left: 96px !important;
    max-width: 239px !important;
    border: 1px solid #8591a2 !important;
    height: 140px;
    overflow: hidden;
  }
  #mockup {
    display:inline-block !important;
  }
  #slider-image {
    max-width: 100% !important;

  }
  #cocanvas-modal, #origame-modal, #tictac-modal, #burning-modal, #ph-modal {
    background: #fff;
    max-width: 320px !important;
    font-family: 'Montserrat', sans-serif;
    font-weight: 300;
    padding: 30px !important;

    color: #000;
    height: 410px;
    box-sizing: content-box !important;
  }
}
@media only screen and (min-width: 500px) {
  #top-menu {
    padding: 0 !important;
    margin: 0 !important;
    display: flex;
    justify-content: space-around;
  }
  #top-menu li a {
    margin: 20px !important;
    font-size: 0.96em;
    padding:2px 3px 2px 5px !important;
  }
  .main {
    padding: 0px 0px 15px 15px ;
  }
  footer {
    bottom: 30px !important;
  }
  #social-media {
    margin-top: 15px;
    margin-left: -30px !important;
  }
}
@media only screen and (min-width: 600px) {
  #top-menu {
    padding: 0 !important;
    margin: 0 !important;
    display: inline-block;
   }
  #top-menu li a {
    font-size: 0.96em;
  }
  .main {
    padding: 20px 35px 35px 35px;
    height: 200vh !important;
  }
  #gallery {
    flex-wrap: wrap !important;
    flex-direction: row;
    justify-content: center;
  }
  .porthole {
    flex: 0 50% !important;
  }
  #social-media {
    display:inline-block;
    margin-left: 10px !important;
    margin-top: 20px;
  }
}
@media only screen and (min-width: 800px) {
  .main {
    padding: 20px 35px 35px 35px;
  }
  #social-media {
    display:inline-block;
    margin-left: 10px !important;
    margin-top: 20px;
  }
  #intro-text, .about-text {
    font-size: 1.1em;
    padding-right: 35px !important;
  }
  #gallery {
    width: 85vw;
  }
  .particletext {
    padding-left: 5px;
  }
}
@media only screen and (min-width: 918px) {
  .main {
    padding: 1.5em 3em 3em 3em;
    height: 160vh !important;
  }
  #gallery {
    justify-content: space-around;
  }
}
/* ... */

